пока миша не даст будет все вот так, доделал заполнение доков, склонения, мапы итд щас тестики напишем и заживем гойдА