@@ -111,6 +111,27 @@
             <artifactId>hypersistence-utils-hibernate-63</artifactId>
             <version>3.8.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.petrovich4j</groupId>
+            <artifactId>petrovich4j</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
@@ -142,6 +163,9 @@
                             <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
